impls/connector/src/connector/snapshots/hopr_chain_connector__connector__channels__tests__connector_should_open_channel.snap
---
source: impls/connector/src/connector/channels.rs
expression: "*connector.client().snapshot()"
---
accounts:
  1:
    chain_key: 668430def9eacd2b5064acf85d73fb0b351a1c8c
    keyid: 1
    multi_addresses: []
    packet_key: 3f6b51c1158631d57d2ecfe0cc49396de92be26bcea89b77cd60223f1023f1a0
    safe_address: "0101010101010101010101010101010101010101"
  2:
    chain_key: bea83ba0fcee21da44a30c893f466e6bf0c29bbb
    keyid: 2
    multi_addresses: []
    packet_key: 4b8f66f9df296e7d7c2280d9c833c879297ee9d435d6e075d46fad5717211b72
    safe_address: "0202020202020202020202020202020202020202"
native_balances:
  668430def9eacd2b5064acf85d73fb0b351a1c8c:
    __typename: NativeBalance
    balance: 0.999999999999999999 xDai
  "0101010101010101010101010101010101010101":
    __typename: NativeBalance
    balance: 0 xDai
  bea83ba0fcee21da44a30c893f466e6bf0c29bbb:
    __typename: NativeBalance
    balance: 1 xDai
  "0202020202020202020202020202020202020202":
    __typename: NativeBalance
    balance: 0 xDai
token_balances:
  668430def9eacd2b5064acf85d73fb0b351a1c8c:
    __typename: HoprBalance
    balance: 0 wxHOPR
  "0101010101010101010101010101010101010101":
    __typename: HoprBalance
    balance: 99.99999999999999999 wxHOPR
  bea83ba0fcee21da44a30c893f466e6bf0c29bbb:
    __typename: HoprBalance
    balance: 0 wxHOPR
  "0202020202020202020202020202020202020202":
    __typename: HoprBalance
    balance: 100 wxHOPR
safe_allowances:
  "0101010101010101010101010101010101010101":
    __typename: SafeHoprAllowance
    allowance: 9999999999999.99999999999999999 wxHOPR
  "0202020202020202020202020202020202020202":
    __typename: SafeHoprAllowance
    allowance: 10000000000000 wxHOPR
deployed_safes:
  "0101010101010101010101010101010101010101":
    address: "0101010101010101010101010101010101010101"
    chain_key: 668430def9eacd2b5064acf85d73fb0b351a1c8c
    owners:
      - 668430def9eacd2b5064acf85d73fb0b351a1c8c
    module_address: 463977c851087dca6e69d488fbd69dbad3ffc7fe
    registered_nodes: []
    threshold: "1"
  "0202020202020202020202020202020202020202":
    address: "0202020202020202020202020202020202020202"
    chain_key: bea83ba0fcee21da44a30c893f466e6bf0c29bbb
    owners:
      - bea83ba0fcee21da44a30c893f466e6bf0c29bbb
    module_address: ff263744a4621e2cac0f4882cc623bee3c9aef8d
    registered_nodes: []
    threshold: "1"
safe_redeem_stats: {}
tx_counts:
  668430def9eacd2b5064acf85d73fb0b351a1c8c: 1
channels:
  d7f3fa28f0caa757e81226e1ee86a9efdbe7991442286183797296ebaa4d292a:
    balance: 0.00000000000000001 wxHOPR
    closure_time: ~
    concrete_channel_id: d7f3fa28f0caa757e81226e1ee86a9efdbe7991442286183797296ebaa4d292a
    destination: 2
    epoch: 1
    source: 1
    status: OPEN
    ticket_index: "0"
chain_info:
  channel_closure_grace_period: "300"
  channel_dst: "0000000000000000000000000000000000000000000000000000000000000000"
  block_number: 1
  chain_id: 100
  gas_price: "1000000000"
  ledger_dst: "0000000000000000000000000000000000000000000000000000000000000000"
  max_fee_per_gas: "3000000000"
  max_priority_fee_per_gas: "100000000"
  min_ticket_winning_probability: 1
  key_binding_fee: 0.01 wxHOPR
  safe_registry_dst: "0000000000000000000000000000000000000000000000000000000000000000"
  ticket_price: 1 wxHOPR
  network: rotsee
  contract_addresses: "{\"announcements\":\"0x078B2D5C9b13e256699902704D1f9Beb79Fc51A2\",\"channels\":\"0xD8C91008c68cd87E7C52Ea1a2C6f6dC6A5236008\",\"module_implementation\":\"0x300Cb87f686c4FF5d975951c225969af4433ADf5\",\"node_safe_migration\":\"0x04e079e7FC8E445b58d048200847206c692Deb48\",\"node_safe_registry\":\"0x1267F2Ad0a70C975Cb4e2C810C4F2b42a455Cc09\",\"node_stake_factory\":\"0x607b6559FE4c2bB5d97de65F0CEC5DB444824634\",\"ticket_price_oracle\":\"0x9cd65f0b11B3028EadA50dE57E46C12848608fAB\",\"token\":\"0xD4fdec44DB9D44B8f2b6d529620f9C0C7066A2c1\",\"winning_probability_oracle\":\"0x9344093c5ac613BDBAC939E33fF760C9e6dF9F1f\",\"xhopr_token\":\"0xD057604A14982FE8D88c5fC25Aac3267eA142a08\"}"
  expected_block_time: "5"
  finality: "3"
version: "1"
health: OK
active_txs: {}
